# DVSS_PPA

./: API_DESIGN.md  DESIGN_REVIEW.md  IMPLEMENTATION_PLAN.md  MENU_DESIGN.md  PROJECT_COMPLETION_SUMMARY.md  README.md  STRUCTURE_COMPARISON.md  SYSTEM_DESIGN.md  auto-deploy.sh  docker-compose.yml  package-lock.json  package.json  start-dev.sh  stop-dev.sh  test_auth.py  test_db_connection.py  test_login.py  view-logs.sh
backend-python/: .env  .pre-commit-config.yaml  .ruff.toml  Dockerfile  REFACTOR_REPORT.md  app.py  pyproject.toml  requirements.txt  server.py  server_simple.py  test_db.py  test_server.py
backend-python/config/: database.py  env.py  get_db.py  get_redis.py  settings.py
backend-python/core/: config.py  config_old.py  database.py  dependencies.py  deps.py  logger.py  models.py  redis.py  redis_client.py  security.py
backend-python/exceptions/: __init__.py  custom_exception.py  handle.py
backend-python/middlewares/: auth_middleware.py  auth_middleware_new.py  cors_middleware.py  gzip_middleware.py  handle.py
backend-python/module_dvss/controller/: auth_controller.py  dvss_controller.py  field_controller.py  log_controller.py  metrics_controller.py  order_controller.py  role_controller.py  shard_controller.py  user_controller.py  user_controller_new.py  user_controller_old.py
backend-python/module_dvss/dao/: log_dao.py  (+8 more)
backend-python/scripts/: init_db.py  init_db_async.py
backend-python/utils/: __init__.py  common_util.py  crypto_util.py  date_util.py  file_util.py  log_util.py  page_util.py  pwd_util.py  response_util.py  validation_util.py
(+216 files in other folders)
